# StudyMate

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
static/css/: style.css
static/js/: feather.min.js
studymate/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  confirm_error.html  confirm_registration.html  login.html  main.html
templates/includes/: header.html  navmenu.html
universities/: admin.py  enums.py  models.py  urls.py  views.py
universities/migrations/: 0001_initial.py  0002_remove_semester_speciality_remove_speciality_cost_and_more.py  0003_alter_semester_speciality_version.py
users/: admin.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_email_and_more.py  0003_user_auth_token_alter_user_is_active_and_more.py
